# amp

./: .commit-bundle  .final-topbar  .gitignore  .marker  .svg-gradient-applied  .topbar-complete  ANDROID_NOTIFICATIONS_COMPLETE.md  CLAUDE.md  COMPLETION_REPORT.md  CORRELATION_UPDATE_SUMMARY.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dioxus.toml  INJECTION_IMPLEMENTATION.md  PROJECT_COMPLETE.md  PROJECT_VALIDATION_COMPLETE.md  QUICK_START_TESTING.md  README.md  STADSATLAS_MAP_FIX.md  TESTING_STATUS.md  VALIDATION_CHECKLIST.md  build.sh  fmt_fix_clippy.sh  validate.sh
.github/: WORKFLOW_FIXES.md
.github/workflows/: android-test.yml  ci.yml  correlation-tests-old.yml  correlation-tests.yml  ios-test.yml  server-benchmark.yml
amp-correlation/: Cargo.toml  miljöparkering.parquet
amp-correlation/src/: main.rs
amp-jsonfix/: Cargo.toml
amp-jsonfix/src/: main.rs
android/: CHANGELOG.md  Cargo.toml  Dioxus.toml  NOTIFICATIONS_IMPLEMENTATION.md  README.md  README_REFACTORING.md  build.sh
android/assets/: style.css
android/assets/data/: adress_info.parquet  adresser.parquet  db.parquet  debug.parquet  local.parquet
android/docs/: COMPILATION_FIXES_NEEDED.md  COMPILATION_FIXES_SUMMARY.md  DB_MIGRATION_COMPLETE.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  UI_COMPONENTS.md
android/kotlin/: AndroidManifest.xml.template  BootReceiver.kt  DormantBridge.kt  DormantService.kt  FilePickerHelper.kt  LocationHelper.kt  MainActivity.kt  NotificationHelper.kt  README.md  WebViewConfigurator.kt
android/kotlin/se/malmo/skaggbyran/amp/: NotificationPermissionHelper.kt
android/proguard/: proguard-rules.pro
android/src/: android_bridge.rs  android_utils.rs  countdown.rs  geo.rs  lib.rs  main.rs  matching.rs  notifications.rs  static_data.rs  storage.rs  webview_config.rs
android/src/components/: address_utils.rs  countdown.rs  debug.rs  dormant.rs  file.rs  geo.rs  lifecycle.rs  matching.rs  mod.rs  notification.rs  notifications.rs  settings.rs  static_data.rs  storage.rs  transitions.rs  translations.rs  validity.rs
android/src/ui/: addresses.rs  adresser.rs  confirm_dialog.rs  info_dialog.rs  mod.rs  paneler.rs  panels.rs  settings_dropdown.rs  top_bar.rs  topbar.rs
android/src/ui/assets/: style.css
android/src/ui/components/: mod.rs
android/tests/: notification_integration_test.rs  notification_integration_tests.rs
assets/: style.css
core/: CORRELATION_TESTS.md  Cargo.toml  README.md
core/src/: api.rs  benchmark.rs  checksum.rs  correlation.rs  correlation_tests.rs  geolocation.rs  lib.rs  parquet.rs  state.rs  structs.rs
core/src/correlation_algorithms/: common.rs  distance_based.rs  grid_nearest.rs  kdtree_spatial.rs  linear_algebra.rs  mod.rs  overlapping_chunks.rs  quadtree_spatial.rs  raycasting.rs  rtree_spatial.rs
data/: debug.parquet  miljoparkeringar.json  parkeringsavgifter.json
docs/: ANDROID_IMPLEMENTATION_SUMMARY.md  ANDROID_QUICK_START.md  BLANK-SCREEN-FIX-SUMMARY.md  BUILD-STATUS.md  BUILD_ANDROID_MVP.md  BUILD_PROGUARD_FIX.md  CHANGES.md  CLEANUP_SUMMARY.md  CLI_INTEGRATION_GUIDE.md  COMPILATION_FIXES.md  COMPILATION_FIXES_SUMMARY.md  COMPLETION_VALIDATION.md  FINAL_STATUS.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  IOS_SETUP.md  MainActivity-injection-required.md  REFACTORING_2026_01.md  REFERENCE_GUIDE.md  TESTING.md  TEST_STRATEGY.md  TUI_COLOR_GUIDE.md  WEBVIEW-FIX-COMPLETE.md  algorithms.md  android-build-fixes.md  android-build-kotlin-classes-fix.md  android-kotlin-integration.md  android-notifications.md  android-persistent-state.md  android.md  api-integration.md  architecture.md  blank-screen-fix.md  build-output-analysis.md  building.md  changelog.md  cli-usage.md  cli.md  data-format.md  (+13 more)
icon-gen/: generate-and-move-icons.sh  generate-icons.js  logo.html
ios/: Cargo.toml  Dioxus.toml  README.md
ios/assets/: style.css
ios/src/: ios_bridge.rs  ios_utils.rs  lib.rs  main.rs
ios/src/components/: address_utils.rs  countdown.rs  debug.rs  dormant.rs  geo.rs  lifecycle.rs  matching.rs  mod.rs  notification.rs  notifications.rs  settings.rs  static_data.rs  storage.rs  transitions.rs  translations.rs  validity.rs
ios/src/ui/: addresses.rs  adresser.rs  confirm_dialog.rs  mod.rs  paneler.rs  panels.rs  settings_dropdown.rs  top_bar.rs  topbar.rs
scripts/: Cargo.toml  README.md  adb-install.sh  benchmark.sh  build.sh  build_debug.sh  check_update.sh  correlate.sh  debug.txt  fmt_fix_clippy.sh  generate_debug_parquet.rs  output.sh  parse_correlations.py  proguard-fix.patch  serve.sh  storage-obs.sh  test.sh
scripts/src/: main.rs
server/: Cargo.toml  QUICK_START.md  README.md  TUI_COMPLETE.txt  checksums.json
server/src/: amp_test_0.html  classification.rs  cli.rs  injection_v2.html  main.rs  ui.rs
server/src/assets/: origo_map.html  stadsatlas_interface.css  stadsatlas_interface.html  stadsatlas_interface.js
src/: main.rs
web/: index.html
