[workspace]
members = ["core", "android", "ios", "server"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Albin Sjögren <albin@malmo.skaggbyran.se>"]
license = "GPL-3"

[workspace.dependencies]
rust_decimal = { version = "1.40.0", features = ["serde", "maths"] }
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
arrow = { version = "57.2.0" }
parquet = "57.2.0"
rayon = "1.11.0"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_json = "1.0.149"
geojson = "0.24.2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
anyhow = "1.0.100"