[workspace]
members = ["core", "android", "ios", "server"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Albin Sjögren <albin@malmo.skaggbyran.se>"]
license = "GPL-3"

[workspace.dependencies]
rust_decimal = { version = "1.40.0", features = ["serde", "maths"] }
dioxus = { version = "0.7.3", features = ["mobile", "router"] }
dioxus-native = "0.7.3"
dioxus-free-icons = { version = "0.10.0", features = ["material-design-icons-device", "material-design-icons-image", "material-design-icons-maps"] }
arrow = { version = "57.2.0" }
parquet = "57.2.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
geojson = "0.24.2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
anyhow = "1.0.100"
geodesy = "0.14.0"
clap = { version = "4.5.54", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4.43"
chrono-tz = "0.10.0"
rstar = "0.12.2"
indicatif = "0.18.3"
jni = "0.21.1"
strsim = "0.11.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }