[workspace]
members = ["core", "android", "ios", "server", "scripts"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Albin Sjögren <albin@malmo.skaggbyran.se>"]
license = "GPL-3"

[workspace.dependencies]
rust_decimal = { version = "1.40.0", features = ["serde", "maths"] }
dioxus = { version = "0.7.3", features = ["mobile", "router"] }
dioxus-free-icons = { version = "0.10.0", features = ["material-design-icons-device", "material-design-icons-image", "material-design-icons-maps", "material-design-icons-action", "material-design-icons-social", "material-design-icons-navigation", "material-design-icons-hardware", "font-awesome-brands"] }
arrow = { version = "57.3.0" }
parquet = "57.3.0"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
geojson = "0.24.2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4.43"
chrono-tz = "0.10.4"
indicatif = "0.18.3"
jni = "0.21.1"
strsim = "0.11.1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
bytes = "1.11.1"
image = "0.25.9"
log = "0.4.29"
env_logger = "0.11.8"
android_logger = "0.15.1"
ndk-context = "0.1.1"
once_cell = "1.21.3"
rand = { version = "0.8.5"}
serial_test = "3.2.0"