[package]
name = "amp-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
dioxus.workspace = true
dioxus-native.workspace = true
dioxus-free-icons.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
strsim.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
arrow.workspace = true
parquet.workspace = true
bytes.workspace = true
tokio.workspace = true
tao.workspace = true
image.workspace = true
log = "0.4.29"
env_logger = "0.11.8"
jni = "0.21.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
jni.workspace = true

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "amp"
path = "src/main.rs"
