[package]
name = "amp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rust_decimal.workspace = true
arrow.workspace = true
parquet.workspace = true
rayon.workspace = true
serde.workspace = true
geojson.workspace = true
serde_json.workspace = true
anyhow.workspace = true
geodesy.workspace = true
sha2.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio.workspace = true
