[package]
name = "amp-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
dioxus.workspace = true

[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "amp"
path = "src/main.rs"
