[package]
name = "amp-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
dioxus.workspace = true
dioxus-free-icons.workspace = true
chrono.workspace = true
anyhow.workspace = true
strsim.workspace = true
uuid.workspace = true
arrow.workspace = true
parquet.workspace = true
bytes.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
once_cell.workspace = true
rayon.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSFileManager", "NSURL", "NSString", "NSArray"] }
oslog = "0.2.0"

[dev-dependencies]
serial_test.workspace = true

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "amp"
path = "src/main.rs"
doctest = false

[lib]
doctest = false