[package]
name = "amp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
rayon.workspace = true
indicatif.workspace = true
rand = "0.8"
urlencoding = "2.1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "amp-server"
path = "src/main.rs"
