[package]
name = "amp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
rayon.workspace = true
indicatif.workspace = true
rand.workspace = true
anyhow.workspace = true
serde_json.workspace = true
geojson.workspace = true
rust_decimal.workspace = true

[[bin]]
name = "amp-server"
path = "src/main.rs"
doctest = false